@@ -21,6 +21,15 @@
 # Usage: make-css-file-arrays.pl <header> <output> <input> ...
 
 use strict;
+use Getopt::Long;
+
+my $preprocessor;
+
+GetOptions('preprocessor=s' => \$preprocessor);
+
+if (!$preprocessor) {
+    $preprocessor = "/usr/bin/gcc -E -P -x c++";
+}
 
 my $header = $ARGV[0];
 shift;
@@ -39,7 +48,7 @@ for my $in (@ARGV) {
     my $name = $1;
 
     # Slurp in the CSS file.
-    open IN, "-|", "/usr/bin/gcc", "-E", "-P", "-x", "c++", $in or die;
+    open IN, $preprocessor . " " . $in . "|" or die;
     my $text; { local $/; $text = <IN>; }
     close IN;
 
